services/member-service/k8s/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member-service
  namespace: tellawl
  labels:
    app: member-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: member-service
  template:
    metadata:
      labels:
        app: member-service
    spec:
      containers:
        - name: member-service
          image: lopesgabriel/member-service:6f0207c
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          readinessProbe:
            httpGet:
              path: /internal/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 15
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /internal/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 15
            failureThreshold: 3

---

apiVersion: v1
kind: Service
metadata:
  name: member-service
  namespace: tellawl
  labels:
    app: member-service
spec:
  type: ClusterIP
  selector:
    app: member-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
